# geolog-zeta

./: Cargo.toml  LICENSE  README.md  ROADMAP.md
.beads/: bd.sock.startlock  issues.jsonl  last-touched
docs/: ARCHITECTURE.md  SYNTAX.md
examples/: elaborate.rs  full_petri.rs  roundtrip.rs
examples/geolog/: category.geolog  field_projection_chase_test.geolog  field_projection_test.geolog  graph.geolog  iso_instance_test.geolog  iso_theory_test.geolog  monoid.geolog  nested_instance_test.geolog  petri_net.geolog  petri_net_full.geolog  (+20 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_parser.rs  fuzz_repl.rs
proofs/: GeologProofs.lean  MonotonicSubmodel.lean  lake-manifest.json  lakefile.lean
src/: ast.rs  cc.rs  core.rs  elaborate.rs  error.rs  id.rs  lexer.rs  lib.rs  meta.rs  naming.rs  overlay.rs  parser.rs  patch.rs  pretty.rs  repl.rs  serialize.rs  solver.rs  store.rs  tensor.rs  universe.rs  version.rs  workspace.rs  zerocopy.rs
tests/: examples_integration.rs  generators.rs  manual_fuzz.rs  proptest_naming.proptest-regressions  proptest_naming.rs  proptest_overlay.proptest-regressions  proptest_overlay.rs  proptest_patch.proptest-regressions  proptest_patch.rs  proptest_query.proptest-regressions  proptest_query.rs  proptest_query_backend.rs  proptest_roundtrip.rs  proptest_solver.rs  proptest_structure.rs  proptest_tensor.rs  proptest_universe.rs  unit_chase.rs  unit_elaborate.rs  unit_meta.rs  unit_parsing.rs  unit_pretty.rs  unit_relations.rs  unit_version.rs  unit_workspace.rs
theories/: GeologMeta.geolog  RelAlgIR.geolog  TensorIR.geolog
(+45 files in other folders)
