[package]
name = "geolog"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.9"
ariadne = "0.4"  # for nice error reporting
uuid = { version = "1", features = ["v7"] }
roaring = "0.10"
nonminmax = "0.1"
rkyv = { version = "0.7", features = ["validation", "uuid", "indexmap"] }
tinyvec = { version = "1.6", features = ["alloc"] }
indexmap = "2.0"
memmap2 = "0.9"
rustyline = "15"  # readline for REPL
toml = "0.8"      # workspace.toml parsing
serde = { version = "1", features = ["derive"] }  # for toml
egglog-union-find = "1.0"  # union-find for congruence closure

[dev-dependencies]
insta = "1.40"    # snapshot testing
proptest = "1.4"  # property-based testing
tempfile = "3.10" # temp dirs for persistence tests

[[bin]]
name = "geolog"
path = "src/bin/geolog.rs"
